--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ajv-keywords": "^3.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1",
