--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
